--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -1,27 +1,42 @@
 body {
   background: #eee;
   font-family: sans-serif;
+  font-size: 16px;
 }
 
 .card {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 25px 0 10px;
 }
 
 .title {
   background: #e3f4ff;
+  width: 380px;
+  height: 30px;
+  margin: 0px auto 10px;
 }
 
 .content {
   background: #e3f4ff;
+  box-sizing: border-box;
+  width: 380px;
+  margin: 20px auto 20px;
+  padding: 15px 10px;
 }
 
 .button-container {
   background: #e3f4ff;
+  width: 380px;
+  margin: 20px auto 0px;
+  text-align: center;
+  padding: 15px 0px;
 }
 
 button {
   background: white;
+  display: block;
   border: 1px solid #eee;
+  margin: 0 auto;
 }
