--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
 }
 
 img {
@@ -7,9 +7,35 @@ img {
   height: 100px;
 }
 
+.img-container {
+  display: flex;
+  justify-content: center;
+}
+
+.text {
+  text-align: center;
+}
+
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
+}
+
+.item1,
+.item2,
+.item3,
+.item4 {
+  max-width: 200px;
+  justify-content: center;
+  align-items: center;
+}
+
+.item-container {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
 }
 
 /* do not edit this footer */
